fix color contrast

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,7 +16,7 @@
 @source inline("{hover:,active:,focus:,}dark:bg-{purple,orange,blue,rose,yellow,cyan,lime}-{600..900..100}");
 @source inline("dark:bg-{purple,orange,blue,rose,yellow,cyan,lime}-950");
 @source inline("bg-{purple,orange,blue,rose,yellow,cyan,lime}-50");
-@source inline("{dark:,}text-{purple,orange,blue,rose,yellow,cyan,lime}-{50,500,950}");
+@source inline("{dark:,}text-{purple,orange,blue,rose,yellow,cyan,lime}-{50,100,500,900,950}");
 
 @layer utilities {
     body {
